@startuml

package "Drone " <<aggregate>> {

    class Drone <<Entity>> <<root>>{
    }

    class SerialNumber <<Value Object>>{
    }

    enum DroneStatus <<Value Object>>{
    }

    class RemovalReason <<Value Object>>{
    }

    class DroneLanguage <<Value Object>>{
    }

    class DroneLanguageValidate <<Service>>{
    }

    Drone --> "1" DroneStatus: status
    Drone --> "1" SerialNumber: serialNumber
    Drone --> "0..*" RemovalReason: removalReason
    Drone --> "1" DroneLanguage: language
    DroneLanguageValidate ..> "1" DroneLanguage: validates
}

package "ModelOfDrone " <<aggregate>> {

    class Model <<Entity>> <<root>>{
    }
    class ModelName <<Value Object>>{
    }
    class Configuration <<Entity>>{
    }

    class WindSpeed <<Value Object>>{
    }

    class PositionTolerance <<Value Object>>{
    }

    enum SafetyStatus <<Value Object>>{
    }

    Model --> "1" Configuration: configuration
    Configuration --> "1..*" WindSpeed: windSpeed
    Configuration --> "1..*" PositionTolerance: positionTolerance
    Model --> "1" ModelName: modelName
    Configuration --> SafetyStatus: safetyStatus

    Drone --> "1" Model: uses
}

package "Maintenance " <<aggregate>> {

    class Maintenance <<Entity>> <<root>>{
    }

    Drone --> "1..*" Maintenance: undergoes
}

package "MaintenanceType " <<aggregate>> {

    class MaintenanceType <<Entity>> <<root>>{
    }
}

package Shared {

    class Date <<Value Object>>{
    }

    class Description <<Value Object>>{
    }

    class Name <<Value Object>>{
    }

    Maintenance ----> "1" Date: date
    Maintenance ----> "1" Description: description
    Maintenance ----> "1" MaintenanceType: type

    Model ----> "1" Name: modelName
    MaintenanceType ----> "1" Name: name
}

@enduml
